WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
288891
REGRESSION(
291236@main
) Crash in PlaybackSessionManager::actionHandlersChanged()
https://bugs.webkit.org/show_bug.cgi?id=288891
Summary
REGRESSION(291236@main) Crash in PlaybackSessionManager::actionHandlersChanged()
Jer Noble
Reported
2025-02-28 16:57:22 PST
REGRESSION(
291236@main
) Crash in PlaybackSessionManager::actionHandlersChanged()
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-02-28 16:57:32 PST
<
rdar://problem/145892333
>
Jer Noble
Comment 2
2025-02-28 16:59:55 PST
Pull request:
https://github.com/WebKit/WebKit/pull/41686
EWS
Comment 3
2025-02-28 18:51:19 PST
Committed
291419@main
(3ab8d395fce6): <
https://commits.webkit.org/291419@main
> Reviewed commits have been landed. Closing PR #41686 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug