REGRESSION(291236@main) Crash in PlaybackSessionManager::actionHandlersChanged() https://bugs.webkit.org/show_bug.cgi?id=288891 <rdar://145892333>

Reviewed by Chris Dumez and Jean-Yves Avenard.

Fix a couple unguarded uses of WeakPtr and std::optional.

* Source/WebKit/WebProcess/cocoa/PlaybackSessionManager.mm:
(WebKit::PlaybackSessionManager::actionHandlersChanged):

Canonical link: https://commits.webkit.org/291419@main